add_executable(rawls_convert rawls_convert.cpp)
add_executable(rawls_merge_mean rawls_merge_mean.cpp)
add_executable(rawls_h_flip rawls_h_flip.cpp)
add_executable(rawls_merge_mean_incr rawls_merge_mean_incr.cpp)
add_executable(rawls_merge_median_incr rawls_merge_median_incr.cpp)

target_link_libraries(rawls_convert LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_mean LINK_PUBLIC rawls)
target_link_libraries(rawls_h_flip LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_mean_incr LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_median_incr LINK_PUBLIC rawls)

set_property(TARGET rawls_merge_mean PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_convert PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_h_flip PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_merge_mean_incr PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_merge_median_incr PROPERTY CXX_STANDARD 17)