add_executable(rawls_convert rawls_convert.cpp)
add_executable(rawls_merge_mean rawls_merge_mean.cpp)
add_executable(rawls_h_flip rawls_h_flip.cpp)
add_executable(rawls_merge_mean_incr rawls_merge_mean_incr.cpp)
add_executable(rawls_merge_median_incr rawls_merge_median_incr.cpp)
add_executable(rawls_merge_MON_incr rawls_merge_MON_incr.cpp)
add_executable(rawls_merge_MON_pct_incr rawls_merge_MON_pct_incr.cpp)
add_executable(rawls_update rawls_update.cpp)
add_executable(extract_stats_images extract_stats_images.cpp)
add_executable(extract_stats_images_all extract_stats_images_all.cpp)
add_executable(extract_stats_images_all_reduced extract_stats_images_all_reduced.cpp)

target_link_libraries(rawls_convert LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_mean LINK_PUBLIC rawls)
target_link_libraries(rawls_h_flip LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_mean_incr LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_median_incr LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_MON_incr LINK_PUBLIC rawls)
target_link_libraries(rawls_merge_MON_pct_incr LINK_PUBLIC rawls)
target_link_libraries(extract_stats_images LINK_PUBLIC rawls)
target_link_libraries(extract_stats_images_all LINK_PUBLIC rawls)
target_link_libraries(extract_stats_images_all_reduced LINK_PUBLIC rawls)
target_link_libraries(rawls_update LINK_PUBLIC rawls rawls_v1)

set_property(TARGET rawls_merge_mean PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_convert PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_h_flip PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_merge_mean_incr PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_merge_median_incr PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_merge_MON_incr PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_merge_MON_pct_incr PROPERTY CXX_STANDARD 17)
set_property(TARGET extract_stats_images PROPERTY CXX_STANDARD 17)
set_property(TARGET extract_stats_images_all PROPERTY CXX_STANDARD 17)
set_property(TARGET extract_stats_images_all_reduced PROPERTY CXX_STANDARD 17)
set_property(TARGET rawls_update PROPERTY CXX_STANDARD 17)